# bookstore-api

./: db.sqlite3  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_publishers_name.py  0002_books_publisher.py  0003_alter_books_image_alter_books_subtitle.py  0003_books_average_rating_books_publisher_and_more.py  0004_alter_publishers_name.py  0005_books_author.py  0006_alter_books_is_bn_alter_books_is_bn_13.py  0007_alter_books_is_bn_13.py  0008_alter_books_is_bn_alter_books_is_bn_13.py  0009_alter_books_title.py  0010_alter_books_publication_date.py  0011_alter_books_created_at.py
bookstore/: settings.py  urls.py
